--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./svg/logo-no-background.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MEGO | PORTFOLIO</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-</body>
-
+    <script type="module" src="./src/main.jsx"></script>
+  </body>
 </html>
